// Vitest Snapshot v1

exports[`plugins/css > should override browserslist of autoprefixer when using output.overrideBrowserslist config 1`] = `
{
  "cache": undefined,
  "devtool": undefined,
  "module": {
    "rules": [
      {
        "name": "css",
        "test": /\\\\\\.css\\$/,
        "type": "css",
        "use": [
          {
            "loader": [Function],
            "name": "postcss",
            "options": {
              "modules": {
                "auto": true,
                "generateScopedName": "[path][name]__[local]--[hash:base64:5]",
                "localsConvention": "camelCase",
              },
              "postcssOptions": {
                "plugins": [
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  {
                    "browsers": [
                      "Chrome 80",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "Chrome 80",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                ],
              },
              "sourceMap": true,
            },
          },
        ],
      },
    ],
  },
  "target": undefined,
}
`;

exports[`plugins/less > should add less-loader 1`] = `
{
  "cache": undefined,
  "devtool": undefined,
  "module": {
    "rules": [
      {
        "exclude": [],
        "name": "less",
        "test": /\\\\\\.less\\$/,
        "type": "css",
        "use": [
          {
            "loader": [Function],
            "name": "postcss",
            "options": {
              "modules": {
                "auto": true,
                "generateScopedName": "[path][name]__[local]--[hash:base64:5]",
                "localsConvention": "camelCase",
              },
              "postcssOptions": {
                "plugins": [
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  {
                    "browsers": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "> 0.01%",
                        "not dead",
                        "not op_mini all",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                ],
              },
              "sourceMap": true,
            },
          },
          {
            "loader": [Function],
            "name": "less",
            "options": {
              "implementation": "<ROOT>/compiled/less",
              "lessOptions": {
                "javascriptEnabled": true,
              },
              "sourceMap": true,
            },
          },
        ],
      },
    ],
  },
  "target": undefined,
}
`;

exports[`plugins/less > should add less-loader with tools.less 1`] = `
{
  "cache": undefined,
  "devtool": undefined,
  "module": {
    "rules": [
      {
        "exclude": [],
        "name": "less",
        "test": /\\\\\\.less\\$/,
        "type": "css",
        "use": [
          {
            "loader": [Function],
            "name": "postcss",
            "options": {
              "modules": {
                "auto": true,
                "generateScopedName": "[path][name]__[local]--[hash:base64:5]",
                "localsConvention": "camelCase",
              },
              "postcssOptions": {
                "plugins": [
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  {
                    "browsers": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "> 0.01%",
                        "not dead",
                        "not op_mini all",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                ],
              },
              "sourceMap": true,
            },
          },
          {
            "loader": [Function],
            "name": "less",
            "options": {
              "implementation": "<ROOT>/compiled/less",
              "lessOptions": {
                "javascriptEnabled": false,
              },
              "sourceMap": true,
            },
          },
        ],
      },
    ],
  },
  "target": undefined,
}
`;

exports[`plugins/sass > should add sass-loader 1`] = `
{
  "cache": undefined,
  "devtool": undefined,
  "module": {
    "rules": [
      {
        "exclude": [],
        "name": "sass",
        "test": /\\\\\\.s\\(a\\|c\\)ss\\$/,
        "type": "css",
        "use": [
          {
            "loader": [Function],
            "name": "postcss",
            "options": {
              "modules": {
                "auto": true,
                "generateScopedName": "[path][name]__[local]--[hash:base64:5]",
                "localsConvention": "camelCase",
              },
              "postcssOptions": {
                "plugins": [
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  {
                    "browsers": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "> 0.01%",
                        "not dead",
                        "not op_mini all",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                ],
              },
              "sourceMap": true,
            },
          },
          {
            "builtinLoader": "sass-loader",
            "name": "sass",
            "options": {
              "rspackImporter": true,
              "sourceMap": true,
            },
          },
        ],
      },
    ],
  },
  "target": undefined,
}
`;
